<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.ulht.yrtracker.HistoricoActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <TableRow>
            <TextView
                android:text="@string/distancia_percorrida"
                android:textSize="17sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/textView_distancia"
                android:textSize="17sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right" />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/velocidade_max"
                android:textSize="17sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/textView_velocidade_max"
                android:textSize="17sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right" />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/velocidade_media"
                android:textSize="17sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/textView_velocidade_med"
                android:textSize="17sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right" />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/data"
                android:textSize="17sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/textView_data"
                android:textSize="17sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right" />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/duracao"
                android:textSize="17sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/textView_duracao"
                android:textSize="17sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right" />
        </TableRow>

    </TableLayout>

    <com.google.android.gms.maps.MapView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>