<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.ulht.yrtracker.DetalhesPontoActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <TableRow>
            <TextView
                android:text="@string/data"
                android:textSize="17sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/textView_data"
                android:textSize="17sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right" />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/latitude"
                android:textSize="17sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/textView_latitude"
                android:textSize="17sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right" />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/longitude"
                android:textSize="17sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/textView_longitude"
                android:textSize="17sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right" />
        </TableRow>

    </TableLayout>

    <com.ulht.yrtracker.TouchImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageView_fotografia" />

</LinearLayout>
